--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="media-queries.css">
 </head>
-<body>
+<body style="overflow-x:hidden;">
   <div class="header-wrapper">
     <header>
       <nav>
@@ -43,7 +43,7 @@
               <h3 class="card-title-1">Bootstrap v3.3.6</h3>
               <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
 
-              <button class="btn-1">Button Green</button>
+              <button class="btn-1"> <span class="button-hide">Button</span>Green</button>
             </div>
         </div>
   
@@ -55,20 +55,22 @@
               <h3 class="card-title-2">Responsive Design</h3>
               <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
 
-              <button class="btn-2">Button Red</button>
+              <button class="btn-2"><span class="button-hide">Button</span>Red</button>
             </div>
         </div>
 
 
 
-        <div class="card">
+        <div class="card card-1">
+          <div class="sample">
             <img src="img/1-3.jpg" alt="col-3" class="grid-3-img">
-            <div class="content">
+            <div class="content content-1">
               <h3 class="card-title-3">Parallax Layout</h3>
               <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
 
-              <button class="btn-3">Button Blue</button>
+              <button class="btn-3"><span class="button-hide">Button</span>Blue</button>
             </div>
+          </div>
         </div>
   
   </section>
@@ -84,19 +86,19 @@
         <h3 class="card-title-4">Two Column Left Side</h3>
         <p class="para-2column">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.
           <br><br>
-          Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
+         <p class="unwanted-para"> Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p></p>
       </div>
     </div>
 
     <div class="card-2">
       <img src="img/2-2.jpg">
-      <div class="content">
+      <div class="content content-2">
         <h3 class="card-title-5">Two Column Right Side</h3>
         <p class="para-2column">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.
           <br><br>
-          Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
+         <p class="unwanted-para"> Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p></p>
 
-          <button class="btn-4">Read More</button>
+          <button class="btn-4 sample-button">Read More</button>
       </div>
     </div>
 
